# dnd-character-generator

./: .env  Dockerfile  app.py  characters.db  main.py  pyproject.toml  test.py
static/: styles.css
templates/: characters.html  index.html
