[tool.poetry]
name = "dnd"
version = "0.1.0"
description = ""
authors = ["d.metelev <d.metelev@vk.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
load-dotenv = "^0.1.0"
flask = "^3.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
